// Версия ProtoBuf
syntax = "proto3";

// Текущий пакет - указывает пространство имен для сервиса и сообщений. Помогает избегать конфликтов имен.
package shop;

// Настройки для генерации Go кода.
option go_package = "pim-sys.proto.v1;proto";

service Template {
  rpc ListTemplates (ListTemplatesRequest) returns (ListTemplatesResponse);
  rpc NewTemplate (NewTemplateRequest) returns (NewTemplateResponse);
  rpc AlterTemplate (AlterTemplateRequest) returns (AlterTemplateResponse);
  rpc DeleteTemplate (DeleteTemplateRequest) returns (DeleteTemplateResponse);
}

message NewTemplateRequest {
  string name = 1;
  string description = 2;
  int32 branch_id = 3;
  repeated AttributeInfo attributes = 4;
}

message NewTemplateResponse {}

message AlterTemplateRequest {
  int32 branch_id = 1;
  string name = 2;
  string description = 3;
  repeated AttributeInfo attributes = 4;
}

message AlterTemplateResponse{}

message DeleteTemplateRequest {
  int32 template_id = 1;
}

message DeleteTemplateResponse {}

message ListTemplatesRequest{}

message ListTemplatesResponse {
  repeated TemplateInfo info = 1;
}

message TemplateInfo{
  int32 template_id = 1;
  string name = 2;
  string description = 3;
  repeated AttributeInfo attributes = 4;
}

message AttributeInfo {
  string type = 2;
  bool is_value_required = 3;
  bool is_unique = 4;
  string name = 5;
  string description = 6;
}
